# fossdev

./: .gitignore  Makefile  NETWORKING_NOTES.md  PracticeMakeFile  docker-compose.yaml
discount_service/: pyproject.toml
discount_service/src/app/: main.py
docs/source/: conf.py  index.rst
docs_domain/docs/: SPECIFICATION.md
docs_domain/docs/source/: DOMAIN.rst  HOW_TO_CONTRIBUTE.rst  QUICKSTART.md  conf.py  index.rst
docs_domain/src/: sales.py
docs_domain/tests/: test_sales.py
file_exchanger/: Makefile
file_exchanger/docs/diagrams/: contextDigram.drawio  fileStorage.drawio
linux_as_execenv/: pinger.py
order_service/: Makefile  pyproject.toml
order_service/src/app/: main.py
product_service/: Dockerfile  pyproject.toml
testing/: .gitignore
testing/src/: math_demo.py
testing/tests/: test_principles.py
testing_tdd/: requirements.txt  setup.py
testing_tdd/src/: ndfl.py
testing_tdd/tests/: test_ndfl_basic.py
