[project]
name = "discount-service"
version = "0.1.0"
description = ""
authors = [
    {name = "Nikita Starashchuk",email = "nik.starashchuk@bk.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.136.1,<0.137.0)",
    "uvicorn (>=0.46.0,<0.47.0)",
    "redis (>=7.4.0,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
