[project]
name = "product-service"
version = "0.0.1"
description = ""
authors = [
    {name = "Nikita Starashchuk",email = "nik.starashchuk@bk.ru"}
]
license = "MIT"
readme = "README.md"
packages = [{ include = "app", from = "src" }]
requires-python = ">=3.12"
dependencies = [
    "uvicorn[standard] (>=0.46.0,<0.47.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
